<resources>
    <string name="app_name">GiveAndTake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Give And Take App</string>
    <string name="nav_header_subtitle">developed by Linoy, Yanna and Mor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Give&amp;Take</string>
    <string name="add_new_post">Create Post</string>
    <string name="menu_profile">User Profile</string>
    <string name="hello_blank_fragment">Error - User not found</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Good to have you back! \nLogin to start Give&amp;Take</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="to_register">Click here to register</string>
    <string name="no_account">Doesn\'t have an account?</string>
    <string name="register_tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="delete_post">Delete</string>
    <string name="edit_post">Edit</string>
    <string name="save_post">Save</string>
    <string name="cancel_add_post">Cancel</string>
    <string name="content_header">Content:</string>
    <string name="content_placeholder">Describe your item...</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_placeholder">Numbers Only</string>
    <string name="create_post">Create post</string>
    <string name="item_image">Item Image</string>
    <string name="location">Location</string>
    <string name="location_placeholder">City Name</string>
    <string name="menu_map">Map</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">user name</string>
    <string name="user_phone">user phone</string>
    <string name="user_email">user email</string>
    <string name="log_out">Log Out</string>
    <string name="searchPost">Search</string>
    <string name="email_format">Email must be at this format: email@domain.com</string>
    <string name="password_format">Password must be at least 6 character</string>
    <integer name="min_password_length">6</integer>
</resources>