<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Posts.EditPostFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPost_phoneInput"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/phone_placeholder"
        app:layout_constraintStart_toEndOf="@+id/editPost_phoneText"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete_actv" />

    <TextView
        android:id="@+id/editPost_phoneText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/editPost_title"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="Edit Post"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editPost_imageText"
        android:layout_width="374dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/item_image"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPost_descriptionInput"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPost_descriptionInput"
        android:layout_width="368dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/content_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPost_title" />

    <TextView
        android:id="@+id/editPost_locationText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/main_cam_btn"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <ImageButton
        android:id="@+id/main_gallery_btn"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="178dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/et_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/editPost_UpImage"
        android:layout_width="149dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@android:drawable/ic_menu_upload"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/main_cancel_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="200dp"
        android:text="@string/cancel_add_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete_actv" />

    <Button
        android:id="@+id/main_save_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="50dp"
        android:text="@string/save_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete_actv" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete_actv"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/location_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editPost_locationText"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>