<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Posts.PostDetailsFragment">

    <ProgressBar
        android:id="@+id/postDetailsProgressBar2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/idIVPostImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="50dp"
        android:src="@drawable/image2" />

    <TextView
        android:id="@+id/idTVContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVPostImage"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/IdPhoneCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVContent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/idIVPhoneIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:src="@drawable/ic_call"
                android:clickable="false"
                app:tint="@color/colorPrimary" />
            <TextView
                android:id="@+id/idTVPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/idIVPhoneIcon"
                android:layout_toRightOf="@id/idIVPhoneIcon"
                android:text="@string/phone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/IdLocationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IdPhoneCard"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/idIvLocationIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:src="@drawable/ic_location"
                android:clickable="false"
                app:tint="@color/colorPrimary" />
            <TextView
                android:id="@+id/idTVLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/idIvLocationIcon"
                android:layout_toRightOf="@id/idIvLocationIcon"
                android:text="@string/location" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>